<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/triangulos"
    tools:context="com.udea.santiagoceron.lab1_p1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5sp"
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textSize="29sp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sGroup">
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="6"
            android:id="@+id/sCircle"
            android:layout_height="match_parent"
            android:text="@string/circle"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="Selected">
        </RadioButton>
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="7"
            android:id="@+id/sSquare"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/square"
            android:textStyle="bold"
            android:onClick="Selected"
            android:textSize="15sp"/>
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="8"
            android:id="@+id/striang"
            android:layout_height="match_parent"
            android:text="@string/triangle"
            android:onClick="Selected"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <RadioButton
            android:id="@+id/sCube"
            android:layout_width="0sp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:text="@string/Cube"
            android:onClick="Selected"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/eBase"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:hint="@string/base"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/eHeight"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:hint="@string/height"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/eRadious"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:hint="@string/radious"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/eWidth"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:hint="@string/width"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Compute"
        android:onClick="Compute"
        android:background="@color/lightgray"
        android:textStyle="bold"
        android:textColor="@color/darkorange"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empty"
            android:id="@+id/sResult"
            android:textSize="24sp"
            android:textColor="@color/darkred"
            android:textStyle="bold"
            android:textColorHint="@color/darkgray"
            android:gravity="center_horizontal"
            />


    </LinearLayout>
</LinearLayout>
